# harvest-tools

./: .travis.yml  CITATION  HarvestIO.cpp  HarvestIO.h  INSTALL.py  INSTALL.txt  LICENSE.txt  Makefile.in  README  README.md  Tree.h  TreeNode.cpp  TreeNode.h  configure.ac  harvest-snps.py  harvest-variants.py  harvest.cpp  setup.py
pb/: harvest.proto
src/: harvest-alignments.py  harvest-backbone.py  harvest-phylogeny.py  harvest-snps.py  harvest-variants.py
src/harvest/: AnnotationList.cpp  AnnotationList.h  HarvestIO.cpp  HarvestIO.h  LcbList.cpp  LcbList.h  PhylogenyTree.cpp  PhylogenyTree.h  PhylogenyTreeNode.cpp  PhylogenyTreeNode.h  ReferenceList.cpp  ReferenceList.h  TrackList.cpp  TrackList.h  VariantList.cpp  VariantList.h  exceptions.h  harvest.cpp  parse.cpp  parse.h
src/harvest/capnp/: harvest.capnp
src/harvest/pb/: harvest.proto
test/: test2.fna  test2.hvt  test2.tree  test2.vcf
